--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptatum maiores earum mollitia veniam consectetur tempora iure.N
+        umquam in consectetur distinctio molestiae,
+        sequi necessitatibus debitis voluptatum mollitia beatae fugit modi.
+        Porro?</p>
+    </div>
 </body>
 </html>
