added my second and third blog

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <h3>My first website</h3>
+        <h3>My first blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Voluptatum maiores earum mollitia veniam consectetur tempora iure.N
         umquam in consectetur distinctio molestiae,
@@ -17,3 +17,19 @@
     </div>
 </body>
 </html>
+<div>
+    <h3>My second blog</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Voluptatum maiores earum mollitia veniam consectetur tempora iure.N
+    umquam in consectetur distinctio molestiae,
+    sequi necessitatibus debitis voluptatum mollitia beatae fugit modi.
+    Porro?</p>
+</div>
+<div>
+    <h3>My third blog</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Voluptatum maiores earum mollitia veniam consectetur tempora iure.N
+    umquam in consectetur distinctio molestiae,
+    sequi necessitatibus debitis voluptatum mollitia beatae fugit modi.
+    Porro?</p>
+</div>
